Add rudimentary styling

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en-us">
   <head></head>
-  <body>
+  <body class="course-about">
     <div id="root"></div>
   </body>
 </html>
