--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,12 @@
 <!doctype html>
 <html lang="en-us">
-  <head></head>
-  <body class="course-about">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="<%= process.env.FAVICON_URL %>" type="image/x-icon" />
+    <link rel="stylesheet" href="<%= process.env.MARKETING_SITE_BASE_URL %>/css/mfe-course-about.css" />
+  </head>
+  <body class="gym-course-about">
     <div id="root"></div>
   </body>
 </html>
