--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="<%= process.env.FAVICON_URL %>" type="image/x-icon" />
     <link rel="stylesheet" href="<%= process.env.MARKETING_SITE_BASE_URL %>/css/mfe-course-about.css" />
+
+    <meta name="author" content="Aquent Gymnasium"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:locale" content="en_US"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:site" content="@AquentGymnasium"/>
+    <meta name="twitter:creator" content="@AquentGymnasium"/>
   </head>
   <body class="gym-course-about">
     <div id="root"></div>
