update packages/component names

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8" />
+    <title>Course About | <%= process.env.SITE_NAME %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="<%= process.env.FAVICON_URL %>" type="image/x-icon" />
+    <link rel="stylesheet" href="<%= process.env.MARKETING_SITE_BASE_URL %>/css/mfe-course-about.css" />
 
     <meta name="author" content="Aquent Gymnasium"/>
     <meta property="og:type" content="website"/>
